# macos-uninstall-inspector

./: README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  confidence-model.md  distribution-strategies.md  generic-vendor-formulas.md  pipeline.md  roadmap.md
examples/: adobe-creative-cloud.json  homebrew-claude.json  invalid-missing-distribution-kind.json
schemas/: finding.schema.json
scripts/: validate_examples.py
src/macos_uninstall_inspector/: __init__.py  cli.py  distribution.py  identity.py  inspector.py  runtime.py  scanner.py  schema_tools.py
src/macos_uninstall_inspector/data/: finding.schema.json
tests/: test_cli_inspect.py  test_cli_modes.py  test_cli_validation_script.py  test_distribution.py  test_docs_policy.py  test_identity.py  test_inspector.py  test_inspector_merge.py  test_mode_thresholds.py  test_packaged_schema.py  test_readme_localization.py  test_readme_system_integrations.py  test_runtime.py  test_runtime_homebrew_target.py  test_runtime_matching.py  test_scanner.py  test_scanner_system_integrations.py  test_scanner_system_vendor.py  test_schema_validation.py  test_system_integration_scoring.py
